--- a/hompage.html
+++ b/hompage.html
@@ -8,15 +8,35 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Josefin+Sans&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
 
 </head>
 <body>
     <div class="preloader">
         <div class="preloadervideoblock">
-            <video src="preloader.mp4" class="preloadervideo" autoplay muted loop></video>
+            <video src="preloader.mp4" class="preloadervdo" autoplay muted loop></video>
         </div>
         <div class="preloadertext">Welcome to E-Cell of IIIT Sonepat</div>
     </div>
+    <div class="homepage">
+        <a href="homepage.html" class="logo"></a>
+        <div class="header">
+            <div class="nav nav_beforepreload">
+                <a href="homepage.html" class="home">Home</a>
+                <a href="" class="events">Events</a>
+                <a href="" class="aboutus">About Us</a>
+                <a href="" class="ourteam">Our Team</a>
+            </div>
+            <div class="headervdocontainer headervdocontainer_afterpreload">
+                <video src="headervdo.mp4" class="headervdo hvdo_afterpreload" loop muted autoplay></video>
+            </div>
+            <div class="heading">E-Cell IIIT Sonepat</div>
+            <div class="tagline">Dream, Create and Inspire...</div>
+        </div>
+    </div>
     <script src="Javascript.js"></script>
+    lorem50
 </body>
 </html>
