--- a/hompage.html
+++ b/hompage.html
@@ -20,8 +20,8 @@
         </div>
         <div class="preloadertext">Welcome to E-Cell of IIIT Sonepat</div>
     </div>
+    <a href="homepage.html" class="logo"></a>
     <div class="homepage">
-        <a href="homepage.html" class="logo"></a>
         <div class="header">
             <div class="nav nav_beforepreload">
                 <a href="homepage.html" class="home">Home</a>
@@ -35,8 +35,9 @@
             <div class="heading">E-Cell IIIT Sonepat</div>
             <div class="tagline">Dream, Create and Inspire...</div>
         </div>
-    </div>
+       </div>
+       <div class="midbody"> Block for which grid has to be made again</div>
+    
     <script src="Javascript.js"></script>
-    lorem50
 </body>
 </html>
