--- a/homepage.html
+++ b/homepage.html
@@ -11,7 +11,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
-
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="preloader">
@@ -36,25 +39,34 @@
             <div class="tagline">Dream, Create and Inspire...</div>
         </div>
        </div>
+       <div class="social">
+        <a href="https://www.instagram.com/ecell.iiitsonepat/" class="instagram" target="_blank">&nbsp;</a>
+        <a href="https://www.facebook.com/E-Cell-IIIT-Sonepat-113917040446486" class="facebook" target="_blank">&nbsp;</a>
+        <a href="https://www.linkedin.com/company/e-cell-iiit-sonepat/" class="linkedin" target="_blank">&nbsp;</a>
+        <a href="https://www.youtube.com/" class="youtube" target="_blank">&nbsp;</a>
+        </div>
        <div class="midbody"> 
            <div class="quotegenerator">
                <div class="quote">Quote</div>
                <div class="writer">WriterName</div>
             </div>
            <div class="lineafterquote"></div>
-           <div class="compendium">Compendium</div>
+           <div class="compendium">
+               <h1>Compendium</h1>
+               <h4>Content</h4>
+            </div>
            <div class="lineaftercompendium"></div>
-           <div class="motive">Motive</div>
+           <div class="motive">
+               <h1 class="motiveheading">Our Motive</h1>
+               <div class="motives"></div>
+           </div>
            <div class="lineaftermotive"></div>
-           <div class="whyus">Why Us?</div>
+           <div class="whyus">
+               <h1>Why Us???</h1>
+        </div>
        </div>
        <div class="footer">
-        <div class="social">
-           <a href="https://www.instagram.com/ecell.iiitsonepat/" class="instagram" target="_blank">&nbsp;</a>
-           <a href="https://www.facebook.com/E-Cell-IIIT-Sonepat-113917040446486" class="facebook" target="_blank">&nbsp;</a>
-           <a href="https://www.linkedin.com/company/e-cell-iiit-sonepat/" class="linkedin" target="_blank">&nbsp;</a>
-           <a href="https://www.youtube.com/" class="youtube" target="_blank">&nbsp;</a>
-           </div>
+       
        <div class="gpsmap">GPS MAP</div>
            <div class="importantlinks">Important Links</div>
        </div>
