--- a/homepage.html
+++ b/homepage.html
@@ -45,7 +45,7 @@
                         <a class="nav-link active px-3" aria-current="page" href="#">Home</a>
                       </li>
                       <li class="nav-item mx-1">
-                        <a class="nav-link px-3" href="#">Events</a>
+                        <a class="nav-link px-3" href="event/event.html">Events</a>
                       </li>
                       <li class="nav-item mx-1">
                         <a class="nav-link px-3" href="#">About Us</a>
