--- a/event/event.html
+++ b/event/event.html
@@ -49,7 +49,7 @@
                   <div class="collapse navbar-collapse flex-row justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                       <li class="nav-item  mt-1 mt-lg-0 mx-1">
-                        <a class="nav-link px-3" aria-current="page" href="#">Home</a>
+                        <a class="nav-link px-3" aria-current="page" href="../homepage.html">Home</a>
                       </li>
                       <li class="nav-item mx-1">
                         <a class="nav-link active px-3" href="event.html">Events</a>
