--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
                         <a class="nav-link px-3" href="event/event.html">Events</a>
                       </li>
                       <li class="nav-item mx-1">
-                        <a class="nav-link px-3" href="#">About Us</a>
+                        <a class="nav-link px-3" href="aboutus/aboutus.html">About Us</a>
                       </li>
                       <li class="nav-item mx-1">
-                        <a class="nav-link px-3" href="#">Our Team</a>
                       </li>
                     </ul>
                   </div>
