about us corrected

--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -26,16 +26,16 @@
         <div class="collapse navbar-collapse flex-row justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item  mt-1 mt-lg-0 mx-1">
-              <a class="nav-link active px-3" aria-current="page" href="#">Home</a>
+              <a class="nav-link px-3" aria-current="page" href="../index.html">Home</a>
             </li>
             <li class="nav-item mx-1">
-              <a class="nav-link px-3" href="#">Events</a>
+              <a class="nav-link px-3" href="../event/event.html">Events</a>
             </li>
             <li class="nav-item mx-1">
-              <a class="nav-link px-3" href="#">About Us</a>
+              <a class="nav-link active px-3" href="../aboutus/aboutus.html">About Us</a>
             </li>
             <li class="nav-item mx-1">
-              <a class="nav-link px-3" href="#">Our Team</a>
+              <a class="nav-link px-3" href="../ourteam/team.html">Our Team</a>
             </li>
           </ul>
         </div>
