--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         <a class="nav-link px-3" href="aboutus/aboutus.html">About Us</a>
                       </li>
                       <li class="nav-item mx-1">
+                        <a class="nav-link px-3" href="ourteam/team.html">Our Team</a>
                       </li>
                     </ul>
                   </div>
