--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a class="nav-link px-3" href="event/event.html">Events</a>
                       </li>
                       <li class="nav-item mx-1">
-                        <a class="nav-link px-3" href="aboutus/aboutus.html">About Us</a>
+                        <a class="nav-link px-3" href="aboutus/aboutus.html">NOt working</a>
                       </li>
                       <li class="nav-item mx-1">
                         <a class="nav-link px-3" href="ourteam/team.html">Our Team</a>
