--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <a href="https://www.instagram.com/ecell.iiitsonepat/" class="instagram" target="_blank">&nbsp;</a>
         <a href="https://www.facebook.com/E-Cell-IIIT-Sonepat-113917040446486" class="facebook" target="_blank">&nbsp;</a>
         <a href="https://www.linkedin.com/company/e-cell-iiit-sonepat/" class="linkedin" target="_blank">&nbsp;</a>
-        <a href="https://www.youtube.com/" class="youtube" target="_blank">&nbsp;</a>
+        <a href="https://www.youtube.com/channel/UCSLfrQ-S9uimhsO5tqPBRNA" class="youtube" target="_blank">&nbsp;</a>
         </div>
        </div>
 
