--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="preloadertext">Welcome to E-Cell of IIIT Sonepat</div>
     </div>
-    <a href="homepage.html" class="logo"></a>
+    <a href="index.html" class="logo"></a>
     <div class="homepage">
         <div class="header">
           <div class="container-fluid p-1 navi position-fixed end-0 mt-2 mx-3 bg-transparent">
