youtube link added to about us page

--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -60,7 +60,7 @@
               <li><a href="https://www.facebook.com/E-Cell-IIIT-Sonepat-113917040446486"target="_blank"><i class="fab fa-facebook-square"></i></a></li>
               <li><a href="https://www.instagram.com/ecell.iiitsonepat/"target="_blank"><i class="fab fa-instagram "></i></a></li>
               <li><a href="https://www.linkedin.com/company/e-cell-iiit-sonepat/"target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-              <li><a href="https://www.youtube.com/"target="_blank"><i class="fab fa-youtube"></i></a></li>
+              <li><a href="https://www.youtube.com/channel/UCSLfrQ-S9uimhsO5tqPBRNA/videos"target="_blank"><i class="fab fa-youtube"></i></a></li>
             </ul>
           </div>
         </div>
