Font of footer updated in master

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="preloader">
