--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       <div class="importantlinks  container-fluid col-md-11 d-flex flex-row p-4 justify-content-around text-center" >
       
       <div class="col m-2 m-md-3 p-1 p-md-3 "> <i class="far fa-envelope-open" style="color:rgba(133, 132, 132, 0.877);"></i> &nbsp;Reach out us on 
-        <br> Email : ecelliiitsonepat@gmail.com
+        <br><a href="mailto:ecelliiitsonepat@gmail.com">Email : ecelliiitsonepat@gmail.com</a> 
       </div>
 
       <div class="col m-2 m-md-3 p-md-3 "><i class="far fa-hand-point-down" style="color:rgba(133, 132, 132, 0.877);"></i>&nbsp;Important links
@@ -204,17 +204,17 @@
       </div>
       <div class="col m-2 m-md-3 p-1 p-md-3"><i class="far fa-hand-point-down" style="color:rgba(133, 132, 132, 0.877);"></i>&nbsp;Follow us on
         <br>
-        <a href="https://www.youtube.com/channel/UCSLfrQ-S9uimhsO5tqPBRNA">Youtube</a>
+        <a href="https://www.youtube.com/channel/UCSLfrQ-S9uimhsO5tqPBRNA" target="_blank">Youtube</a>
         <br>
-        <a href="https://www.linkedin.com/company/e-cell-iiit-sonepat/">Linkedin</a>
+        <a href="https://www.linkedin.com/company/e-cell-iiit-sonepat/" target="_blank">Linkedin</a>
         <br>
-        <a href="https://www.facebook.com/E-Cell-IIIT-Sonepat-113917040446486">Facebook</a>
+        <a href="https://www.facebook.com/E-Cell-IIIT-Sonepat-113917040446486" target="_blank">Facebook</a>
         <br>
-        <a href="https://www.instagram.com/ecell.iiitsonepat/">Instagram</a>
+        <a href="https://www.instagram.com/ecell.iiitsonepat/" target="_blank">Instagram</a>
       </div>
       <div class="col m-2 m-md-3 p-1 p-md-3"> <i class="fab fa-discord" style="transform: scale(1.5);"></i>&nbsp;&nbsp;Join our Discord Server
         <br>
-      <a href="https://discord.gg/eUZHXhTB"> Ecell IIIT Sonepat</a>
+      <a href="https://discord.gg/eUZHXhTB" target="_blank"> Ecell IIIT Sonepat</a>
       </div>
     </div>
     </div>
