event updated in main

--- a/event/event.html
+++ b/event/event.html
@@ -33,6 +33,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="event_style.css">
+<link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -248,13 +249,43 @@
      <!--Footer Started-->
      <div class="footer container-fluid p-0 m-0 border-0">
     <div class="map container-fluid overflow-hidden p-0 m-0 border-0">
-      <h1 class="display-4 text-center mb-3 reach_us"><i class="fas fa-map-marker-alt" style="color: #1EA362;"></i>&nbsp;  Reach Us</h1>
+      <h1 class="display-4 text-center mb-3"><i class="fas fa-map-marker-alt" style="color: #1EA362;"></i>&nbsp;  Reach Us</h1>
       <iframe class="gpsmap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6982.315943306847!2d77.10393908409192!3d28.95303863380321!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390daddf6cade053%3A0xfd7ceeb61e0dbbe1!2sIIT%20Delhi%20Sonipat%20Campus!5e0!3m2!1sen!2sin!4v1618445149546!5m2!1sen!2sin" width="" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
     <div class="container-fluid">
       <hr class="my-4">
-      <h5 class="text-center">Important Links</h5>
-      <div class="container"></div>
+      <h5 class="text-center text-muted">&copy;E-Cell IIIT Sonepat</h5>
+      <div class="importantlinks  container-fluid col-md-11 d-flex flex-row p-4 justify-content-around text-center" >
+      
+      <div class="col m-2 m-md-3 p-1 p-md-3 "> <i class="far fa-envelope-open" style="color:rgba(133, 132, 132, 0.877);"></i> &nbsp;Reach out us on 
+        <br><a href="mailto:ecelliiitsonepat@gmail.com">Email : ecelliiitsonepat@gmail.com</a> 
+      </div>
+
+      <div class="col m-2 m-md-3 p-md-3 "><i class="far fa-hand-point-down" style="color:rgba(133, 132, 132, 0.877);"></i>&nbsp;Important links
+        <br>
+        <a href="#">Home</a>
+        <br>
+        <a href="https://ecelliiitsonepat.github.io/event/event.html">Events</a>
+        <br>
+        <a href="https://ecelliiitsonepat.github.io/aboutus/aboutus.html">About Us</a>
+        <br>
+        <a href="https://ecelliiitsonepat.github.io/ourteam/team.html">Our Team</a>
+      </div>
+      <div class="col m-2 m-md-3 p-1 p-md-3"><i class="far fa-hand-point-down" style="color:rgba(133, 132, 132, 0.877);"></i>&nbsp;Follow us on
+        <br>
+        <a href="https://www.youtube.com/channel/UCSLfrQ-S9uimhsO5tqPBRNA" target="_blank">Youtube</a>
+        <br>
+        <a href="https://www.linkedin.com/company/e-cell-iiit-sonepat/" target="_blank">Linkedin</a>
+        <br>
+        <a href="https://www.facebook.com/E-Cell-IIIT-Sonepat-113917040446486" target="_blank">Facebook</a>
+        <br>
+        <a href="https://www.instagram.com/ecell.iiitsonepat/" target="_blank">Instagram</a>
+      </div>
+      <div class="col m-2 m-md-3 p-1 p-md-3"> <i class="fab fa-discord" style="transform: scale(1.5);"></i>&nbsp;&nbsp;Join our Discord Server
+        <br>
+      <a href="https://discord.gg/eUZHXhTB" target="_blank"> Ecell IIIT Sonepat</a>
+      </div>
+    </div>
     </div>
   </div>
   <!--Footer Ended-->
