--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -72,5 +72,42 @@
       </div>
     </div>
   </div>
+  <div class="footer container-fluid p-0 m-0 border-0">
+    <div class="container-fluid">
+      <hr class="my-4">
+      <h5 class="text-center text-muted">&copy;E-Cell IIIT Sonepat</h5>
+      <div class="importantlinks  container-fluid col-md-11 d-flex flex-row p-4 justify-content-around text-center" >
+      
+      <div class="col m-2 m-md-3 p-1 p-md-3 "> <i class="far fa-envelope-open" style="color:rgba(133, 132, 132, 0.877);"></i> &nbsp;Reach out us on 
+        <br> Email : ecelliiitsonepat@gmail.com
+      </div>
+
+      <div class="col m-2 m-md-3 p-md-3 "><i class="far fa-hand-point-down" style="color:rgba(133, 132, 132, 0.877);"></i>&nbsp;Important links
+        <br>
+        <a href="#">Home</a>
+        <br>
+        <a href="https://ecelliiitsonepat.github.io/event/event.html">Events</a>
+        <br>
+        <a href="https://ecelliiitsonepat.github.io/aboutus/aboutus.html">About Us</a>
+        <br>
+        <a href="https://ecelliiitsonepat.github.io/ourteam/team.html">Our Team</a>
+      </div>
+      <div class="col m-2 m-md-3 p-1 p-md-3"><i class="far fa-hand-point-down" style="color:rgba(133, 132, 132, 0.877);"></i>&nbsp;Follow us on
+        <br>
+        <a href="https://www.youtube.com/channel/UCSLfrQ-S9uimhsO5tqPBRNA">Youtube</a>
+        <br>
+        <a href="https://www.linkedin.com/company/e-cell-iiit-sonepat/">Linkedin</a>
+        <br>
+        <a href="https://www.facebook.com/E-Cell-IIIT-Sonepat-113917040446486">Facebook</a>
+        <br>
+        <a href="https://www.instagram.com/ecell.iiitsonepat/">Instagram</a>
+      </div>
+      <div class="col m-2 m-md-3 p-1 p-md-3"> <i class="fab fa-discord" style="transform: scale(1.5);"></i>&nbsp;&nbsp;Join our Discord Server
+        <br>
+      <a href="https://discord.gg/eUZHXhTB"> Ecell IIIT Sonepat</a>
+      </div>
+    </div>
+    </div>
+  </div>
 </body>
 </html>
