--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -74,6 +74,10 @@
       </div>
     </div>
   </div>
+  
+  <hr style="color: grey;">
+  
+  <!--Footer-->
   <div class="footer container-fluid p-0 m-0 border-0">
     <div class="container-fluid">
       <hr class="my-4">
