--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -73,6 +73,9 @@
       </div>
     </div>
   </div>
+  
+  <hr style="color: grey;;">
+  <!--foter below-->
   <div class="footer container-fluid p-0 m-0 border-0">
     <div class="container-fluid">
       <hr class="my-4">
