fontawsome link added

--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -15,6 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 
 <body>
@@ -74,9 +75,7 @@
       </div>
     </div>
   </div>
-  
-  <hr style="color: grey;">
-  
+  <br>
   <!--Footer-->
   <div class="footer container-fluid p-0 m-0 border-0">
     <div class="container-fluid">
