--- a/ourteam/team.html
+++ b/ourteam/team.html
@@ -215,9 +215,8 @@
       </div>
     </div>
   
-  <br><br>
   <!--Footer Started-->
-     <div class="footer container-fluid p-0 m-0 border-0">
+     <div class="footer container-fluid p-0 m-0 border-0 mt-3">
    
     <div class="container-fluid">
       <hr class="my-4">
