--- a/ourteam/team.html
+++ b/ourteam/team.html
@@ -214,7 +214,7 @@
     </div>
   <br><br>
   1     <!--Footer Started-->
-     <div class="footer container-fluid p-0 m-0 border-0">
+     <div class="footer container-fluid p-0 m-0 border-0 mt-3">
    
     <div class="container-fluid">
       <hr class="my-4">
