--- a/ourteam/team.html
+++ b/ourteam/team.html
@@ -47,7 +47,7 @@
   </div>
 
 <div>
-<h1 class="display-1  main-heading border">E-Cell Team</h1>
+<h1 class="display-1  main-heading border"><i class="fas fa-users"></i>E-Cell Team</h1>
 <h2 class="team-heading">Core Team</h2>
 </div>
 
