--- a/ourteam/team.html
+++ b/ourteam/team.html
@@ -240,13 +240,13 @@
       </div>
       <div class="col m-2 m-md-3 p-1 p-md-3"><i class="far fa-hand-point-down" style="color:rgba(133, 132, 132, 0.877);"></i>&nbsp;Follow us on
         <br>
-        <a href="https://www.youtube.com/channel/UCSLfrQ-S9uimhsO5tqPBRNA">Youtube</a>
+       <a href="https://www.youtube.com/channel/UCSLfrQ-S9uimhsO5tqPBRNA"><i class="fab fa-youtube"></i>&nbsp;Youtube</a>
         <br>
-        <a href="https://www.linkedin.com/company/e-cell-iiit-sonepat/">Linkedin</a>
+        <a href="https://www.linkedin.com/company/e-cell-iiit-sonepat/"><i class="fab fa-linkedin"></i>&nbsp;Linkedin</a>
         <br>
-        <a href="https://www.facebook.com/E-Cell-IIIT-Sonepat-113917040446486">Facebook</a>
+        <a href="https://www.facebook.com/E-Cell-IIIT-Sonepat-113917040446486"><i class="fab fa-facebook-square"></i>&nbsp;Facebook</a>
         <br>
-        <a href="https://www.instagram.com/ecell.iiitsonepat/">Instagram</a>
+        <a href="https://www.instagram.com/ecell.iiitsonepat/"><i class="fab fa-instagram"></i>&nbsp;Instagram</a>
       </div>
       <div class="col m-2 m-md-3 p-1 p-md-3"> <i class="fab fa-discord" style="transform: scale(1.5);"></i>&nbsp;&nbsp;Join our Discord Server
         <br>
