--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Ecell | IIIT Sonepat</title>
-  <link rel="shortcut icon" type="img/jpeg" href="logo.jpeg">
+  <title></title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
@@ -20,8 +19,7 @@
 </head>
 
 <body>
-  <a href="../index.html" class="logo"></a>
-  <div class="container-fluid p-1 navi position-fixed end-0 mt-2 mx-3 bg-transparent">
+  <div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid justify-content-end">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,7 +62,7 @@
               <li><a href="https://www.facebook.com/E-Cell-IIIT-Sonepat-113917040446486"target="_blank"><i class="fab fa-facebook-square"></i></a></li>
               <li><a href="https://www.instagram.com/ecell.iiitsonepat/"target="_blank"><i class="fab fa-instagram "></i></a></li>
               <li><a href="https://www.linkedin.com/company/e-cell-iiit-sonepat/"target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-              <li><a href="https://www.youtube.com/channel/UCSLfrQ-S9uimhsO5tqPBRNA/featured"target="_blank"><i class="fab fa-youtube"></i></a></li>
+              <li><a href="https://www.youtube.com/channel/UCSLfrQ-S9uimhsO5tqPBRNA/videos"target="_blank"><i class="fab fa-youtube"></i></a></li>
             </ul>
           </div>
         </div>
@@ -76,25 +74,26 @@
       </div>
     </div>
   </div>
+  
   <br>
-  <!--Footer-->
-  <div class="footer container-fluid p-0 m-0 border-0">
+  <!--foter below-->
+    <div class="footer container-fluid p-0 m-0 border-0">
     <div class="container-fluid">
       <hr class="my-4">
       <h5 class="text-center text-muted">&copy;E-Cell IIIT Sonepat</h5>
       <div class="importantlinks  container-fluid col-md-11 d-flex flex-row p-4 justify-content-around text-center" >
       
       <div class="col m-2 m-md-3 p-1 p-md-3 "> <i class="far fa-envelope-open" style="color:rgba(133, 132, 132, 0.877);"></i> &nbsp;Reach out us on 
-        <br> Email : ecelliiitsonepat@gmail.com
+        <br><a href="mailto:ecelliiitsonepat@gmail.com">Email : ecelliiitsonepat@gmail.com</a> 
       </div>
 
       <div class="col m-2 m-md-3 p-md-3 "><i class="far fa-hand-point-down" style="color:rgba(133, 132, 132, 0.877);"></i>&nbsp;Important links
         <br>
-        <a href="#">Home</a>
+        <a href="https://ecelliiitsonepat.github.io/">Home</a>
         <br>
         <a href="https://ecelliiitsonepat.github.io/event/event.html">Events</a>
         <br>
-        <a href="https://ecelliiitsonepat.github.io/aboutus/aboutus.html">About Us</a>
+        <a href="#">About Us</a>
         <br>
         <a href="https://ecelliiitsonepat.github.io/ourteam/team.html">Our Team</a>
       </div>
@@ -110,7 +109,7 @@
       </div>
       <div class="col m-2 m-md-3 p-1 p-md-3"> <i class="fab fa-discord" style="transform: scale(1.5);"></i>&nbsp;&nbsp;Join our Discord Server
         <br>
-      <a href="https://discord.gg/eUZHXhTB"> Ecell IIIT Sonepat</a>
+      <a href="https://discord.gg/eUZHXhTB" target="_blank"> Ecell IIIT Sonepat</a>
       </div>
     </div>
     </div>
