--- a/ourteam/team.html
+++ b/ourteam/team.html
@@ -5,19 +5,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
+  <title>Ecell | IIIT Sonepat</title>
+  <link rel="shortcut icon" type="img/jpeg" href="logo.jpeg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
-  <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Josefin+Sans&display=swap" rel="stylesheet">
- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 
 </head>
 
 <body>
-<a href="homepage.html" class="logo"></a>
-  <div class="container-fluid">
+  <a href="../index.html" class="logo"></a>
+    <div class="homepage">
+    <div class="container-fluid p-1 navi position-fixed end-0 mt-2 mx-3 bg-transparent">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid justify-content-end">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,9 +44,10 @@
       </div>
     </nav>
   </div>
+  </div>
 
 <div>
-<h1 class="display-1  main-heading border">E-Cell Team</h1>
+<h1 class="display-1  main-heading border"><i class="fas fa-users" style="color:#ffc107"></i>&nbsp;E-Cell Team</h1>
 <h2 class="team-heading">Core Team</h2>
 </div>
 
@@ -212,32 +215,31 @@
         </ul>
       </div>
     </div>
-  <br><br>
-  1     <!--Footer Started-->
-     <div class="footer container-fluid p-0 m-0 border-0 mt-3">
-   
+  
+  <!--Footer Started-->     
+  <div class="footer container-fluid p-0 m-0 border-0">
     <div class="container-fluid">
       <hr class="my-4">
       <h5 class="text-center text-muted">&copy;E-Cell IIIT Sonepat</h5>
       <div class="importantlinks  container-fluid col-md-11 d-flex flex-row p-4 justify-content-around text-center" >
       
       <div class="col m-2 m-md-3 p-1 p-md-3 "> <i class="far fa-envelope-open" style="color:rgba(133, 132, 132, 0.877);"></i> &nbsp;Reach out us on 
-        <br> Email : ecelliiitsonepat@gmail.com
+        <br><a href="mailto:ecelliiitsonepat@gmail.com">Email : ecelliiitsonepat@gmail.com</a> 
       </div>
 
       <div class="col m-2 m-md-3 p-md-3 "><i class="far fa-hand-point-down" style="color:rgba(133, 132, 132, 0.877);"></i>&nbsp;Important links
         <br>
-        <a href="#">Home</a>
+        <a href="https://ecelliiitsonepat.github.io/">Home</a>
         <br>
         <a href="https://ecelliiitsonepat.github.io/event/event.html">Events</a>
         <br>
         <a href="https://ecelliiitsonepat.github.io/aboutus/aboutus.html">About Us</a>
         <br>
-        <a href="https://ecelliiitsonepat.github.io/ourteam/team.html">Our Team</a>
+        <a href="#">Our Team</a>
       </div>
       <div class="col m-2 m-md-3 p-1 p-md-3"><i class="far fa-hand-point-down" style="color:rgba(133, 132, 132, 0.877);"></i>&nbsp;Follow us on
         <br>
-        <a href="https://www.youtube.com/channel/UCSLfrQ-S9uimhsO5tqPBRNA"><i class="fab fa-youtube"></i>&nbsp;Youtube</a>
+       <a href="https://www.youtube.com/channel/UCSLfrQ-S9uimhsO5tqPBRNA"><i class="fab fa-youtube"></i>&nbsp;Youtube</a>
         <br>
         <a href="https://www.linkedin.com/company/e-cell-iiit-sonepat/"><i class="fab fa-linkedin"></i>&nbsp;Linkedin</a>
         <br>
@@ -247,7 +249,7 @@
       </div>
       <div class="col m-2 m-md-3 p-1 p-md-3"> <i class="fab fa-discord" style="transform: scale(1.5);"></i>&nbsp;&nbsp;Join our Discord Server
         <br>
-      <a href="https://discord.gg/eUZHXhTB"> Ecell IIIT Sonepat</a>
+      <a href="https://discord.gg/eUZHXhTB" target="_blank"> Ecell IIIT Sonepat</a>
       </div>
     </div>
     </div>
@@ -255,7 +257,7 @@
   <!--Footer Ended-->
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-
+  
 </body>
 
 </html>
