--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -19,7 +19,8 @@
 </head>
 
 <body>
-  <div class="container-fluid">
+  <a href="index.html" class="logo"></a>
+  <div class="container-fluid p-1 navi position-fixed end-0 mt-2 mx-3 bg-transparent">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid justify-content-end">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
