--- a/ourteam/team.html
+++ b/ourteam/team.html
@@ -109,7 +109,8 @@
 
 
 <!-- Technical Team -->
-
+  <div class="borderup" ></div>
+  <div class="borderdown"></div>
   <div>
   <h2 class="team-heading">TECHNICAL TEAM</h2>
   </div>
@@ -172,7 +173,8 @@
     </div>
 
   <!-- Design Team -->
-
+      <div class="borderup" ></div>
+      <div class="borderdown"></div>
       <div>
       <h2 class="team-heading">DESIGN TEAM</h2>
       </div>
