--- a/ourteam/team.html
+++ b/ourteam/team.html
@@ -47,7 +47,7 @@
   </div>
 
 <div>
-<h1 class="display-1  main-heading border"><i class="fas fa-users" style="color:#ffc107"></i>&nbsp;E-Cell Team</h1>
+<h1 class="display-1  main-heading"><i class="fas fa-users" style="color:#ffc107"></i>&nbsp;E-Cell Team</h1>
 <h2 class="team-heading">Core Team</h2>
 </div>
 
@@ -109,7 +109,8 @@
 
 
 <!-- Technical Team -->
-
+  <div class="borderup" ></div>
+  <div class="borderdown"></div>
   <div>
   <h2 class="team-heading">TECHNICAL TEAM</h2>
   </div>
@@ -172,7 +173,8 @@
     </div>
 
   <!-- Design Team -->
-
+      <div class="borderup" ></div>
+      <div class="borderdown"></div>
       <div>
       <h2 class="team-heading">DESIGN TEAM</h2>
       </div>
