--- a/ourteam/team.html
+++ b/ourteam/team.html
@@ -95,7 +95,7 @@
           </div>
           <div class="info">
             <h3>Harshit Joshi
-              <br><span>Sponsarship Head</span>
+              <br><span>Sponsorship Head</span>
             </h3>
           </div>
         </div>
