--- a/ourteam/team.html
+++ b/ourteam/team.html
@@ -73,7 +73,7 @@
       <div class="card">
         <div class="content">
           <div class="pic">
-            <img src="ravi.jpeg" alt="Ravi Sehrawat">
+            <img src="Ravi.jpeg" alt="Ravi Sehrawat">
           </div>
           <div class="info">
             <h3>Ravi Sehrawat
